# Schemantic

./: .gitignore  Cargo.toml  README.md
examples/: Visual.ipynb  visualization.ipynb
schemantic/: Cargo.toml
schemantic/.cargo/: config.toml
schemantic/src/: index.rs  lib.rs  query.rs  types.rs  utils.rs
schemantic/src/cluster/: cosine_cluster.rs  knn_cluster.rs  l1_cluster.rs  l2_cluster.rs  mean_cluster.rs  mod.rs
schemantic/src/helpers/: mod.rs  same_search.rs
src/: lib.rs
test/: example.py  sameSearchExample.py  test.py  vectorCubeExample.py
