[package]
name = "schemantic"
version = "0.1.0"
edition = "2021"

[lib]
name = "schemantic"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.21", features = ["extension-module", "auto-initialize"] }
rayon = "1.10"
hnsw = "0.7"
ndarray = "0.15"

[package.metadata.maturin]
name = "schemantic"